kubernetes/workloads/system/networking/manifests/http-redirect.yaml
---
# Redirect HTTP to HTTPS for all gateways
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-redirect
  annotations:
    external-dns.alpha.kubernetes.io/controller: none
spec:
  parentRefs:
    - name: private
      namespace: networking
      sectionName: http
    - name: public
      namespace: networking
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
